tester/testsuite/good/simple_intarith1.jl
int main() {
  int x = 10;
  int y = 20;
  int z = 30;
  printInt(x + y + z);
  return 0;
}
