tester/testsuite/bad/call_lambda_as_fun.jl
int main () {
  int => int add5 = fun (x : int) : int -> x + 5;
  printInt(add5(10));
  return 0;
}
